# build-mingw-w64

./: build_deps.sh  build_mingw_w64.sh  meson.build
.github/workflows/: build-aria2.yml  build-dependencies.yml  build-wget2.yml  mingw-w64-build.yml
